<resources>
    <string name="app_name">Tefsal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_terms">By signing up you agree to the</string>
    <string name="action_terms_of_use">Terms of Use</string>
    <string name="action_guest">Enter as Guest</string>
    <string name="action_forgot_pwd">Forgot Password?</string>
    <string name="action_already_hv_ac">ALREADY HAVE AN ACCOUNT?</string>
    <string name="action_send_reset">SEND RESET REQUEST</string>
    <string name="action_forgot_password">FORGOT PASSWORD</string>
    <string name="action_new_user">NEW USER? SIGN UP</string>
    <string name="additional_info">Additional Information</string>
    <string name="additional_note">Please help us to get to know you more by entering\nadditional information that can help us serve you better</string>

    <!--Toolbar Label-->

    <string name="skip">SKIP</string>
    <!--Navigation drawer-->
    <string name="nav_home">HOME</string>

    <string name="nav_mystyle">MY STYLES</string>
    <string name="nav_mytextiles">MY TEXTILES</string>
    <string name="nav_mail">MAIL</string>
    <string name="nav_myaddresses">MY ADDRESSES</string>
    <string name="nav_myorders">MY ORDERS</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="nav_signin">SIGN IN</string>
    <string name="nav_signup">SIGN UP</string>

    <string name="hint_email">EMAIL ADDRESS</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_email_SP">*EMAIL</string>
    <string name="hint_password_SP">*PASSWORD</string>
    <string name="hint_c_password"> *CONFIRM PASSWORD</string>
    <string name="hint_fname"> *FIRST NAME</string>
    <string name="hint_lname"> *LAST NAME</string>
    <string name="hint_mob"> *MOBILE</string>
    <string name="hint_home_num">HOME NUMBER</string>
    <string name="hint_address_name">ADDRESS NAME</string>
    <string name="hint_country">COUNTRY</string>
    <string name="hint_city">CITY</string>
    <string name="hint_area">AREA</string>
    <string name="hint_block">BLOCK</string>
    <string name="hint_street">STREET</string>
    <string name="hint_avenue">AVENUE</string>
    <string name="hint_floor">FLOOR</string>
    <string name="hint_house">HOUSE</string>
    <string name="hint_flate">FLAT NUMBER</string>
    <string name="hint_phone">PHONE NUMBER</string>
    <string name="hint_paci_number">PACI NUMBER (ELECTRONIC ADDRESS)</string>
    <string name="hint_add_desp">ADDITIONAL DESCRIPTION</string>
    <string name="hint_gender">GENDER</string>
    <string name="hint_dob">DATE OF BIRTH</string>
    <string name="hint_nationality">NATIONALITY</string>

    <string name="hint_current_pwd">CURRENT PASSWORD</string>
    <string name="hint_new_pwd">NEW PASSWORD</string>
    <string name="hint_confirm_pwd">CONFIRM PASSWORD</string>

    <string name="hint_email_title">TITLE</string>
    <string name="hint_email_message">MESSAGE</string>

    <!--Buttons-->
    <string name="title_settings">SETTINGS</string>
    <string name="title_signup">SIGN UP</string>
    <string name="title_signin">SIGN IN</string>
    <string name="btn_arabic">عربى</string>
    <string name="btn_english">ENGLISH</string>
    <string name="btn_submit">SUBMIT &amp; CONTINUE</string>
    <string name="btn_txt_chnge_pwd">SAVE CHANGE</string>
    <string name="btn_txt_email_send">SEND</string>


    <!--Labels-->
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_language">Change Language</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_term_conditions">Terms &amp; Conditions</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="no_mail_text">No mail found!</string>


    <!--Tabbar-->
    <string name="btn_dishdasha">DISHDISHA</string>
    <string name="btn_daraa">DARAA</string>
    <string name="btn_abaya">ABAYA</string>


    <!--Tabbar-->
    <string name="btn_inbox">INBOX</string>
    <string name="btn_sent">SENT</string>


    <!--Tabbar-->
    <string name="btn_view_all">TEXTILES &amp; TAILORS</string>
    <string name="btn_textiles">TEXTILES</string>
    <string name="btn_tailors">TAILORS</string>


    <!--Color Picker-->
    <string name="cp_title_beige">BEIGE</string>
    <string name="cp_title_navy">NAVY</string>
    <string name="cp_title_brown">BROWN</string>
    <string name="cp_title_white">WHITE</string>
    <string name="cp_title_olive">OLIVE</string>
    <string name="cp_title_grey">GREY</string>


    <!--Color white Picker-->
    <string name="white_cp_title_diamond">DIAMOND</string>
    <string name="white_cp_title_b_white">B WHITE</string>
    <string name="white_cp_title_clue_white">CLUE WHITE</string>
    <string name="white_cp_title_s_white">S WHITE</string>
    <string name="white_cp_title_grey_white">GREY WHITE</string>


    <!--Errors-->
    <string name="FirstNameTooshort">Error: The first name field is required.</string>
    <string name="LastNameTooshort">Error: The last name field is required.</string>
    <string name="passwordTooshort">Error: Password is too short (Min length 8 character)</string>
    <string name="passwordNotBlank">Error: The password field is required.</string>
    <string name="phoneTooshort">Error: Phone is too short</string>
    <string name="homeNoTooshort">Error: Home number is too short</string>
    <string name="passwordNotMatch">Error: The password confirmation does not match</string>
    <string name="invalidEmail">Error: Your email address is invalid</string>


    <string name="invalidHouse">Error: House field required</string>
    <string name="invalidAddress_name">Error: Address name field required</string>
    <string name="invalidBlock">Error: Block field required</string>
    <string name="invalidCountry">Error: Country field required</string>
    <string name="invalidArea">Error: Area field required</string>
    <string name="invalidCity">Error: City field required</string>
    <string name="invalidStreet">Error: Street field required</string>
    <string name="invalidFlate">Error: Flate number field required</string>
    <string name="invalidPhone">Error: Phone number field required</string>

    <string name="invalidEmailTitle">Error:Title field required</string>
    <string name="invalidEmailMessage">Error:Message field required</string>

    <string name="mismatchPassword">Error:Password mismatch</string>
    <string name="emptyNewPassword">Error:New password should not be empty</string>
    <string name="emptyPassword">Error:New password should not be empty</string>
    <string name="emptyConfirmPassword">Error:Confirm password should not be empty</string>
    <string name="invalidPasswordFormat">Error:Password 8 characters long </string>
    <string name="dateRequireMessage">Date of birth cannot be empty</string>


    <!--Loading-->
    <string name="loading">Loading please wait...</string>


    <string name="forgot_password_subtext">Please enter your email address. You will receive a link to reset your password in that email. The link will be valid for 2 hours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Links-->
    <string name="facebook_url">https://www.facebook.com/tefsalkw/</string>
    <string name="twitter_url">https://twitter.com/tefsal</string>
    <string name="instagram_url">https://www.instagram.com/tefsalkw/</string>


    <!--activity_additioanl_info-->
    <string name="activity_additioanl_info_headingTxt">Additioanl Information</string>


    <!--HomeFragment-->
    <string name="DISHDASHA">DISHDASHA</string>
    <string name="DARAA">DARAA</string>
    <string name="ABAYA">ABAYA</string>
    <string name="ACCESSORIES">ACCESSORIES</string>


    <!--filter_layout_design-->
    <string name="see_all_txt">SEE ALL</string>

    <!--activity_measurement-->
    <string name="tip_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Vestibulum ut dui at urna dapibus blandit sit amet sit
        amet mauris. Nunc viverra porttitor sapien nec molestie.
        Duis efficitur dolor cursus, accumsan quam eget, tincidunt
        justo. Donec nec mauris lobortis, faucibus lectus eget, accumsan est.
        Duis vestibulum accumsan est.</string>


    <!--image_choose_dialog-->

    <string name="image_choose_dialog_header">IMAGE TO UPLOAD</string>
    <string name="image_choose_dialog_gallery_btn_txt">From Gallery</string>
    <string name="image_choose_dialog_camera_btn_txt">From Camera</string>

    <array name="menuTextArray">
        <item>@string/nav_home</item>
        <item>@string/nav_mystyle</item>
        <item>@string/nav_mytextiles</item>
        <item>@string/nav_mail</item>
        <item>@string/nav_myaddresses</item>
        <item>@string/nav_myorders</item>
        <item>@string/nav_settings</item>
    </array>

    <!--zaara_daraa.xml-->
    <string name="text_sizeGuide_zaara_daraa"><u>View Size Guide</u></string>
</resources>
