<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_info_bg"
    android:orientation="vertical"
    tools:context="com.tefal.activity.AddressesActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_info"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="@dimen/text_large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_note"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_small"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mid"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:text="@string/hint_gender"
                    android:textColor="@color/colorDGray"
                    android:textSize="@dimen/text_xsmall" />

                <EditText
                    android:id="@+id/input_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/drop_down"
                    android:paddingBottom="@dimen/margin_mid"
                    android:paddingRight="@dimen/margin_mid"
                    android:paddingTop="@dimen/margin_small"
                    android:singleLine="true"
                    android:text="Male"
                    android:textColor="@color/colorTheme"
                    android:textColorHint="@color/colorTheme"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:text="@string/hint_dob"
                    android:textColor="@color/colorDGray"
                    android:textSize="@dimen/text_xsmall" />

                <EditText
                    android:id="@+id/input_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_mid"
                    android:paddingTop="@dimen/margin_small"
                    android:singleLine="true"
                    android:text="10/10/1990"
                    android:textColor="@color/colorTheme"
                    android:textColorHint="@color/colorTheme"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:text="@string/hint_nationality"
                    android:textColor="@color/colorDGray"
                    android:textSize="@dimen/text_xsmall" />

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/drop_down"
                    android:paddingBottom="@dimen/margin_mid"
                    android:paddingRight="@dimen/margin_mid"
                    android:paddingTop="@dimen/margin_small"
                    android:singleLine="true"
                    android:text="Kuwaiti"
                    android:textColor="@color/colorTheme"
                    android:textColorHint="@color/colorTheme"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/colorTheme"
                android:text="@string/btn_submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>
</RelativeLayout>
